src/lowering/snapshots/rusty__lowering__calls__tests__function_with_string_return_is_changed.snap
---
source: src/lowering/calls.rs
expression: "unit.units[0]"
---
POU {
    name: "complexType",
    variable_blocks: [
        VariableBlock {
            variables: [
                Variable {
                    name: "complexType",
                    data_type: DataTypeReference {
                        referenced_type: "STRING",
                    },
                },
            ],
            variable_block_type: InOut,
        },
        VariableBlock {
            variables: [
                Variable {
                    name: "x",
                    data_type: DataTypeReference {
                        referenced_type: "DINT",
                    },
                },
            ],
            variable_block_type: Input(
                ByVal,
            ),
        },
    ],
    pou_type: Function,
    return_type: None,
    interfaces: [],
}
