src/lowering/snapshots/rusty__lowering__calls__tests__generic_call_statement-2.snap
---
source: src/lowering/calls.rs
expression: "units[0].0.implementations[1]"
snapshot_kind: text
---
Implementation {
    name: "MID",
    type_name: "MID",
    linkage: External,
    pou_type: Function,
    statements: [],
    location: SourceLocation {
        span: Range(
            TextLocation {
                line: 10,
                column: 8,
                offset: 210,
            }..TextLocation {
                line: 9,
                column: 15,
                offset: 201,
            },
        ),
    },
    name_location: SourceLocation {
        span: Range(
            TextLocation {
                line: 6,
                column: 17,
                offset: 124,
            }..TextLocation {
                line: 6,
                column: 20,
                offset: 127,
            },
        ),
    },
    overriding: false,
    generic: true,
    access: None,
}
