src/lowering/snapshots/rusty__lowering__calls__tests__generic_call_statement_with_aggregate_return-2.snap
---
source: src/lowering/calls.rs
expression: "units.0.implementations[1]"
---
Implementation {
    name: "MID",
    type_name: "MID",
    linkage: External,
    pou_type: Function,
    statements: [],
    location: SourceLocation {
        span: Range(10:8 - 9:15),
        file: Some(
            "<internal>",
        ),
    },
    name_location: SourceLocation {
        span: Range(6:17 - 6:20),
        file: Some(
            "<internal>",
        ),
    },
    end_location: SourceLocation {
        span: Range(10:8 - 10:20),
        file: Some(
            "<internal>",
        ),
    },
    overriding: false,
    generic: true,
    access: None,
}
