src/lowering/snapshots/rusty__lowering__calls__tests__generic_call_statement_with_aggregate_return.snap
---
source: src/lowering/calls.rs
expression: "index.find_pou_type(\"MID__STRING\").unwrap()"
---
DataType {
    name: "MID__STRING",
    initial_value: None,
    information: Struct {
        name: "MID__STRING",
        members: [
            VariableIndexEntry {
                name: "MID__STRING",
                qualified_name: "MID__STRING.MID__STRING",
                initial_value: None,
                argument_type: ByRef(
                    InOut,
                ),
                is_constant: false,
                is_var_external: false,
                data_type_name: "__auto_pointer_to_STRING",
                location_in_parent: 0,
                linkage: Internal,
                binding: None,
                source_location: SourceLocation {
                    span: Range(
                        TextLocation {
                            line: 6,
                            column: 17,
                            offset: 124,
                        }..TextLocation {
                            line: 6,
                            column: 20,
                            offset: 127,
                        },
                    ),
                    file: Some(
                        "<internal>",
                    ),
                },
                varargs: None,
            },
            VariableIndexEntry {
                name: "IN",
                qualified_name: "MID__STRING.IN",
                initial_value: None,
                argument_type: ByVal(
                    Input,
                ),
                is_constant: false,
                is_var_external: false,
                data_type_name: "STRING",
                location_in_parent: 1,
                linkage: Internal,
                binding: None,
                source_location: SourceLocation {
                    span: Range(
                        TextLocation {
                            line: 8,
                            column: 12,
                            offset: 184,
                        }..TextLocation {
                            line: 8,
                            column: 14,
                            offset: 186,
                        },
                    ),
                    file: Some(
                        "<internal>",
                    ),
                },
                varargs: None,
            },
        ],
        source: Pou(
            Function,
        ),
    },
    nature: Any,
    location: SourceLocation {
        span: Range(
            TextLocation {
                line: 6,
                column: 17,
                offset: 124,
            }..TextLocation {
                line: 6,
                column: 20,
                offset: 127,
            },
        ),
        file: Some(
            "<internal>",
        ),
    },
}
